# multimedia-manager

./: CMakeLists.txt  Dockerfile  build.sh  run.sh
src/: CMakeLists.txt  account-group.hpp  account-info.hpp  account-manager.cpp  account-manager.hpp  account.hpp  customizable-get-messaging-recipient.cpp  customizable-get-messaging-recipient.hpp  customizable-post-messaging-recipient.cpp  customizable-post-messaging-recipient.hpp  dynamic-assert.cpp  dynamic-assert.hpp  google-gateway.cpp  google-gateway.hpp  inbox.hpp  main-window.cpp  main-window.hpp  main.cpp  media.cpp  media.hpp  message.cpp  message.hpp  messaging-recipient.cpp  messaging-recipient.hpp  messaging-source.hpp  q-request.cpp  q-request.hpp  request.cpp  request.hpp  set-list.hpp  window-manager.hpp
src/accounts/: CMakeLists.txt  account-group.cpp  account-group.hpp  account-manager.cpp  account-manager.hpp  account.cpp  account.hpp  inbox.cpp  (+11 more)
src/widgets/: CMakeLists.txt  account-info-widget.cpp  account-info-widget.hpp  accounts-widget.cpp  accounts-widget.hpp  add-account-group-wizard.cpp  add-account-group-wizard.hpp  get-email-recipients-wizard.cpp  get-email-recipients-wizard.hpp  main-window.cpp  main-window.hpp  send-message-wizard.cpp  send-message-wizard.hpp  view-inbox-dialog.cpp  view-inbox-dialog.hpp
src/widgets/add-account/: account-type-selection-wizard-page.cpp  account-type-selection-wizard-page.hpp  add-account-vendor-wizard-page.cpp  add-account-vendor-wizard-page.hpp  add-account-wizard.cpp  add-gmail-account-page.hpp  validatable-add-account-page.cpp
src/widgets/add-account-wizard/: CMakeLists.txt  account-type-selection-wizard-page.cpp  account-type-selection-wizard-page.hpp  add-account-vendor-wizard-page.cpp  add-account-vendor-wizard-page.hpp  add-account-wizard.cpp  add-account-wizard.hpp  add-gmail-account-page.cpp  add-gmail-account-page.hpp  add-outlook-account-page.cpp  add-outlook-account-page.hpp  validatable-add-account-page.hpp
(+1 files in other folders)
